@@ -8,7 +8,7 @@
 #               2008 Andrzej Sawula, Alex Buloichik, Didier Briel, Martin Fleurke
 #               2009 Didier Briel, Alex Buloichik, Martin Fleurke
 #               2010 Didier Briel, Wildrich Fourie, Martin Fleurke,
-#                    Antonio Vilei, Arno Peters, Alex Buloichik
+#                    Antonio Vilei, Arno Peters, Alex Buloichik, Piotr Kulik
 #               2011 Didier Briel, Briac Pilpre
 #               2012 Martin Fleurke, Wildrich Fourie, Didier Briel, Guido Leenders, Jean-Christophe Helary, 
 #                    Alex Buloichik
@@ -47,6 +47,7 @@
 #  @author Antonio Vilei
 #  @author Briac Pilpre
 #  @author Aaron Madlon-Kay
+#  @author Piotr Kulik
 #
 #  @version 3.0
 #
@@ -1088,7 +1089,9 @@ OpenDoc_ERROR_IN_FILE=Error in file
 XLIFF_OPTIONS_TITLE=XLIFF Filter Options
 XLIFF_OPTIONS_LABEL=Specify tag handling behaviour 
 XLIFF_OPTIONS_26=&Compatibility with OmegaT 2.6
-XLIFF_OPTIONS_FORCE2F=&Force shortcut to "f" for <it pos="end"> tags (applies to 3.x filter only)
+XLIFF_OPTIONS_36_ONLY=The following options apply to the 3.x filter only
+XLIFF_OPTIONS_FORCE2F=&Force shortcut to "f" for <it pos="end"> tags
+XLIFF_OPTIONS_IGNORE4PH=&Ignore type and ctype attributes when building <ph> tag shortcuts
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
 
